--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 
-  <div class="card">
+  <div class="card flex-container">
     <img src="images/drawers.jpg" alt="" class="card-img">
   
     <div class="text-content">
@@ -34,17 +34,19 @@
         to help you make any room feel complete.
       </p>
     
-      <div class="person">
+      <div class="person flex-container">
           <img src="images/avatar-michelle.jpg" alt="">
-          <div class="person-text">
-              <h6>Michelle Appleton</h6>
-              <h6><span class= "date">28 Jun 2020</span></h6>
-          </div>
-          <div class="person-share">
-            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
-              <path fill="#6E8098"
-                d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z" />
-              </svg>
+          <div class="person-info flex-container">
+            <div class="person-text">
+                <h6>Michelle Appleton</h6>
+                <h6><span class= "date">28 Jun 2020</span></h6>
+            </div>
+            <div class="person-share">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
+                <path fill="#6E8098"
+                  d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z" />
+                </svg>
+            </div>
           </div>
       </div>
         
@@ -52,11 +54,11 @@
     </div>
   </div>
 </div>
-<!-- <div class="attribution">
+<div class="attribution">
   <p>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/soltaniworld">Arash Soltani</a>.
   </p>
-</div> -->
+</div>
 </body>
 </html>
