added reset.css to reset all defaults

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Article preview component</title>
@@ -22,7 +23,7 @@
   <div class="card flex-container">
     <img src="images/drawers.jpg" alt="" class="card-img">
   
-    <div class="text-content">
+    <article class="text-content">
       <h1>
         Shift the overall look and feel by adding these wonderful 
         touches to furniture in your home
@@ -51,7 +52,7 @@
       </div>
         
       
-    </div>
+    </article>
   </div>
 </div>
 <div class="attribution">
